@@ -1,4 +1,5 @@
 HEAD
+    + Use File::Slurp instead of Perl6::Slurp
     + Run tests in /var/tmp/anste-tests with a run.sh wrapper
     + Show test log on failures when verbose mode is enabled
     + Made VMs from host with raw base images permanent
